# ke-engine

./: .gitignore  CMakeLists.txt  flake.nix
data/: config.json
include/text_adventure/: game_constants.hpp  ke_engine.hpp
include/text_adventure/databases/: config_loader.hpp  effect_loader.hpp  flag_registry.hpp  item_loader.hpp  variable_registry.hpp
include/text_adventure/dialogue/: action_factory.hpp  choice.hpp  dialogue.hpp  dialogue_manager.hpp
include/text_adventure/states/: condition.hpp  condition_factory.hpp  game_state.hpp
include/text_adventure/ui/: rpg_text.hpp  ui_manager.hpp
src/: main.cpp
src/text_adventure/: helper.cpp  ke_engine.cpp
src/text_adventure/databases/: config_loader.cpp  effect_loader.cpp  flag_registry.cpp  item_loader.cpp  variable_registry.cpp
src/text_adventure/dialogue/: action_factory.cpp  dialogue.cpp  dialogue_manager.cpp
src/text_adventure/state/: condition.cpp  condition_factory.cpp  game_state.cpp
